--- a/src/components/LanguageMenu/Language/language.css
+++ b/src/components/LanguageMenu/Language/language.css
@@ -3,12 +3,17 @@
 	justify-content: center;
 	align-items: center;
 	text-align: center;
-	background-color: white;
+	background-color: rgb(102, 169, 208);
 	border-radius: 10px;
 	padding: 1.5rem;
 	display: flex;
 	flex-direction: column;
 	width: 10rem;
+}
+
+.card:hover {
+	background-color: rgb(122, 189, 228);
+	cursor: pointer;
 }
 
 .heading {
@@ -18,6 +23,6 @@
 
 .flag {
 	width: 6rem;
-	border: solid rgb(83, 83, 83) 2px;
+	border: solid rgb(41, 41, 41) 3px;
 	border-radius: 20px;
 }
