--- a/src/components/LanguageMenu/LanguageButton/Language.css
+++ b/src/components/LanguageMenu/LanguageButton/Language.css
@@ -1,28 +1,29 @@
 .card {
-	gap: 0.5rem;
-	justify-content: center;
-	align-items: center;
-	text-align: center;
-	background-color: rgb(102, 169, 208);
-	border-radius: 10px;
-	padding: 1.5rem;
-	display: flex;
-	flex-direction: column;
-	width: 10rem;
+  gap: 0.5rem;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  background-color: rgb(102, 169, 208);
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  width: 13rem;
+  height: 20rem;
+  box-sizing: border-box !important;
 }
 
 .card:hover {
-	background-color: rgb(122, 189, 228);
-	cursor: pointer;
+  background-color: rgb(122, 189, 228);
+  cursor: pointer;
 }
 
 .heading {
-	font-family: "Dangrek", monospace;
-	font-size: 34px;
+  font-family: "Dangrek", monospace;
+  font-size: 34px;
 }
 
 .flag {
-	width: 6rem;
-	border: solid rgb(41, 41, 41) 3px;
-	border-radius: 20px;
+  width: 6rem;
+  border: solid rgb(41, 41, 41) 3px;
+  border-radius: 20px;
 }
